--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>cloud-providerconsul-payment8006</module>
         <module>cloud-consumerconsul-order80</module>
         <module>cloud-consumer-feign-order80</module>
+        <module>cloud-provider-hygtrix-payment8001</module>
     </modules>
     <packaging>pom</packaging><!-- 这里添加，注意不是jar或war -->
 
