--- a/cloud-config-client-3355/pom.xml
+++ b/cloud-config-client-3355/pom.xml
@@ -12,10 +12,10 @@
     <artifactId>cloud-config-client-3355</artifactId>
     <dependencies>
         <!--添加消息总线RabbitMQ支持-->
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
